--- a/config/sail.yml
+++ b/config/sail.yml
@@ -1,49 +1,46 @@
-# Rails.root/config/sail.yml
-# Setting name with it's information contained inside
-# These values are used for the reset functionality as well
-# rake sail:load_defaults
+---
 ReusePassword:
   description: ReusePassword
-  value: true
-  cast_type: boolean
+  value: 'true'
   group: feature_flags
+  cast_type: boolean
 RetryLimitExceeded:
   description: RetryLimitExceeded
-  value: false
-  cast_type: boolean
+  value: 'false'
   group: feature_flags
+  cast_type: boolean
 DeveloperMessage:
   description: DeveloperMessage
-  value: "Login succeeded"
-  cast_type: string
+  value: Login succeeded
   group: feature_flag
+  cast_type: string
 UserMessage:
   description: UserMessage
-  value: "Login succeeded"
-  cast_type: string
+  value: Login succeeded
   group: feature_flag
+  cast_type: string
 Version:
   description: Version
-  value: "1"
-  cast_type: string
+  value: '1'
   group: feature_flag
+  cast_type: string
 IsEmailValidated:
   description: IsEmailValidated
-  value: true
-  cast_type: boolean
+  value: 'true'
   group: feature_flag
+  cast_type: boolean
 LoginSucceeded:
   description: LoginSucceeded
-  value: true
-  cast_type: boolean
+  value: 'true'
   group: feature_flag
+  cast_type: boolean
 Status:
   description: Status
-  value: "OK"
-  cast_type: string
+  value: OK
   group: feature_flag
+  cast_type: string
 RequestId:
   description: RequestId
-  value: "xxx"
-  cast_type: string
+  value: xxx
   group: feature_flag
+  cast_type: string
